# airflow-tutorial

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
dags/: etl.py  tutorial.py
