[tool.poetry]
name = "airflow-tutorial"
version = "0.1.0"
description = ""
authors = ["kmlee78 <jaoming787@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
apache-airflow = "^2.3.3"

[tool.poetry.dev-dependencies]
poetry = "^1.1.14"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
